# workitt

./: .gitignore  README.md  analyze.ps1  architecture-clipboard-v2.md  architecture-clipboard-v3.md  architecture-unified-render.md  clipboard-bug-analysis.md  clipboard-v2-analysis.md  clipboard-v3-diag.md  fix-summary.md  index.html  package-lock.json  package.json  perf-analysis.md  perf-architecture.md  perf-optimization-summary.md  prd-unified-render.md  qa-roundtrip.md  qa-unified-render.md  review-architect.md  review-product.md  review-qa-regression.md  review-qa.md  vite.config.ts
.github/workflows/: build.yml
backend/: api_via_vite.txt  package-lock.json  package.json  test_insert.sh
backend/src/: index.js
backend/src/db/: index.js
backend/src/mcp/: tapd.js
backend/src/routes/: auth.js  dashboard.js  documents.js  insights.js  mcp.js  models.js  requirements.js
deliverables/software-company/: workit-delivery-2025-07-09.md
docs/: class-diagram.mermaid  sequence-diagram.mermaid  task-dependency.mermaid
electron/: main.cjs  preload.cjs  qc-entry.html  test.js
scripts/: generate-icons.py  kill-port.cjs
src/: App.tsx  api.ts  index.css  tauri-bridge.ts  vite-env.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: clipboard.rs  crypto.rs  db.rs  lib.rs  main.rs  preload.ts
src/components/: ContentBlockRenderer.tsx  ErrorBoundary.tsx  FileChip.tsx  OfficePreview.tsx  QuickCapture.tsx  Sidebar.tsx  TitleBar.tsx
src/constants/: icon.ts
src/context/: AuthContext.tsx  ThemeContext.tsx
src/pages/: Browser.tsx  Dashboard.tsx  Index.tsx  Insights.tsx  Knowledge.tsx  Login.tsx  MCP.tsx  Messages.tsx  Model.tsx  Requirements.tsx  Settings.tsx
src/types/: content.ts
src/utils/: chatParser.ts  contentBlocks.ts  download.ts
