[package]
name = "workit-tauri"
version = "1.0.8"
description = "Workit 需求管理应用"
authors = ["Eafenzhang"]
license = "MIT"
repository = "https://github.com/eafenzhang/workit"
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "workit_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "devtools"] }
tauri-plugin-log = "2"
tauri-plugin-shell = "2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rusqlite = { version = "0.32", features = ["bundled"] }
chrono = "0.4"
log = "0.4"
base64 = "0.22"
image = "0.25"
clipboard-win = "5"
dirs = "6"

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["shellapi", "winuser"] }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
