[package]
name = "workit-tauri"
version = "1.0.8"
description = "Workitt 智能体工作台"
authors = ["Eafenzhang"]
license = "MIT"
repository = "https://github.com/eafenzhang/workit"
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "workit_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "devtools"] }
tauri-plugin-log = "2"
tauri-plugin-shell = "2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rusqlite = { version = "0.32", features = ["bundled"] }
log = "0.4"
base64 = "0.22"
clipboard-win = "5"
dirs = "6"
reqwest = { version = "0.12", features = ["json", "blocking"] }
tokio = { version = "1", features = ["rt-multi-thread"] }
regex = "1"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]

[profile.release]
strip = true
lto = true
codegen-units = 1
opt-level = "s"
panic = "abort"
